# Manikkk

./: .gitignore  README.md
academic_system/: .env.example  .gitignore  API.md  ARCHITECTURE.md  CREDENTIALS.txt  DATABASE_SCHEMA.md  QUICKSTART.md  README.md  create_admin.py  fix_subjects.py  main.py  migrate.py  pyproject.toml  requirements.txt  seed_subjects.py  seed_test_users.py  token.json  token.txt  update_admin_password.py
academic_system/app/: __init__.py
academic_system/app/adapters/: __init__.py
academic_system/app/adapters/controllers/: __init__.py  admin_controller.py  attendance_controller.py  auth_controller.py  faculty_assignment_controller.py  study_material_controller.py  timetable_controller.py
academic_system/app/adapters/repositories/: __init__.py  admin_override_repository.py  (+9 more)
academic_system/app/domain/: __init__.py  exceptions.py
academic_system/app/infrastructure/: __init__.py  authorization.py  config.py  database.py  dependencies.py  security.py
academic_system/app/migrations/: __init__.py  migration_001_subject_assignments.py  migration_002_timetable_single_document.py  migration_003_faculty_assignment_availability.py
academic_system/app/use_cases/: __init__.py  admin_override.py  attendance.py  auth.py  faculty_assignment.py  faculty_availability.py  study_material.py  timetable.py
academic_system/docs/: AUDIT_SUMMARY_2025-05-09.md  CODEBASE_FLOW_DOCUMENTATION.md  DEPLOYMENT_READINESS_2025-05-09.md  FINAL_ROADMAP_2025-05-09.md  FRONTEND_BACKEND_AUDIT_2025-05-09.md  HARDENING_SUMMARY_2025-05-09.md  rbac-system-design.md  schema-refactor-design.md
academic_system/frontend/: .env.example  README.md  index.html  package-lock.json  package.json
academic_system/frontend/src/: App.jsx  index.css
academic_system/tests/: __init__.py  conftest.py  test_admin_override.py  test_auth.py  test_authorization.py  test_faculty_assignment.py  test_faculty_availability.py  test_faculty_availability_overlap.py  test_faculty_availability_slot_locking.py  test_timetable.py  test_timetable_first_conflict.py
academic_system/tests/domain/: test_exceptions.py
academic_system/tests/infrastructure/: test_config.py
academic_system/tests/use_cases/: test_timetable_feasibility_integration.py
(+76 files in other folders)
