[tool.poetry]
name = "academic-management-system"
version = "1.0.0"
description = "Scalable Academic Management System with FastAPI + MongoDB"
authors = ["Manik Bhagat <bhagatmanik4321@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.121.1"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
motor = "^3.7.1"
pymongo = "^4.15.2"
pydantic = "^2.12.3"
pydantic-settings = "^2.11.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.20"
email-validator = "^2.3.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
black = "^24.1.1"
isort = "^5.13.2"
mypy = "^1.8.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
